Full Game working with Scoreboard Now time to make it fun and pretty

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
+  <header>Score: <span id="score">0</span></header>
   <div id="board"></div>
 </body>
 <script src="./src/main.js"></script>
