Added head Icon and game over screen

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
   <header>Score: <span id="score">0</span></header>
   <div id="board"></div>
+  <div id="endGame" class="hidden">THATS ITS!!!!! GAME OVER MAN
+    <button id="reset">Play Again??</button>
+  </div>
 </body>
 <script src="./src/main.js"></script>
 </html>
