--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
   <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
-  <header>Score: <span id="score">0</span></header>
+  <header>Score: <span id="score">0</span><span class="highScore">High Score: <span id="highScore">0</span></header>
   <div id="board"></div>
-  <div id="endGame" class="hidden">THATS ITS!!!!! GAME OVER MAN
-    <button id="reset">Play Again??</button>
+  <div id="endGame" class="hidden">
+    <div class="inner">
+        <h1>THAT'S IT!!!!! GAME OVER MAN</h1>
+        <h2>Score: <span id="endScore"></span></h2>
+        <button id="reset">Play Again??</button>
+    </div>
   </div>
 </body>
 <script src="./src/main.js"></script>
