last minute pre-presentation fixes....the best kind of fixes

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
-  <header>Score: <span id="score">0</span><span class="highScore">High Score: <span id="highScore">0</span></header>
+  <header>Score: <span id="score">0</span><span id="derp">Derpy Snake</span><span class="highScore">High Score: <span id="highScore">0</span></header>
   <div id="board"></div>
   <div id="endGame" class="hidden">
     <div class="inner">
-        <h1>THAT'S IT!!!!! GAME OVER MAN</h1>
+        <h1>Thanks for Derping</h1>
         <h2>Score: <span id="endScore"></span></h2>
         <button id="reset">Play Again??</button>
     </div>
