tweak snek for embedding on HearRo

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
   <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
-  <header>Score: <span id="score">0</span><span id="derp">Derpy Snake</span><span class="highScore">High Score: <span id="highScore">0</span></header>
+  <!-- <header>Score: <span id="score">0</span><span id="derp">HearRo Snake</span><span class="highScore">High Score: <span id="highScore">0</span></header> -->
+  <span id="score">0</span>
   <div id="board"></div>
   <div id="endGame" class="hidden">
-    <div class="inner">
-        <h1>Thanks for Derping</h1>
-        <h2>Score: <span id="endScore"></span></h2>
-        <button id="reset">Play Again??</button>
-        <h3>Press Space to restart game</h3>
+    <div class="inner" id="reset">
+        <span>Hit space to play again</span>
+        <span>Score: <span id="endScore"></span></span>
     </div>
   </div>
 </body>
