--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>Snake</title>
@@ -8,16 +9,19 @@
   <script src='src/Apple.js'></script>
   <link rel="stylesheet" href="src/styles.css">
 </head>
+
 <body>
   <!-- <header>Score: <span id="score">0</span><span id="derp">HearRo Snake</span><span class="highScore">High Score: <span id="highScore">0</span></header> -->
   <span id="score">0</span>
   <div id="board"></div>
   <div id="endGame" class="hidden">
     <div class="inner" id="reset">
-        <span>Hit space to play again</span>
-        <span>Score: <span id="endScore"></span></span>
+      <span>Arrow keys to move</span>
+      <span>Space to reset</span>
+      <span>Score: <span id="endScore"></span></span>
     </div>
   </div>
 </body>
 <script src="./src/main.js"></script>
+
 </html>
